syntax = "proto3";

option go_package = "github.com/MrWestbury/terraxen-scheduler/service";

service TerraxenScheduler {
  rpc Register (RegisterRequest) returns (RegisterReply) {}
  rpc Unregister (UnregisterRequest) returns (UnregisterReply) {}
  rpc Checkin (CheckinRequest) returns (CheckinReply) {}
  rpc GetJob (GetJobRequest) returns (GetJobReply) {}
  rpc UpdateJob (UpdateJobStateRequest) returns (UpdateJobStateReply) {}
  rpc SendJobLog (stream JobLogEntry) returns (JobLogEntryReply) {}
}

message RegisterRequest {
  string poolname = 1;
  string agentname = 2;
}

message RegisterReply {
  string message = 1;
  string agentId = 2;
}

message UnregisterRequest {
  string agentId = 1;
}

message UnregisterReply {
  string message = 1;
}

message CheckinRequest {
  string agentId = 1;
}

message CheckinReply {
  string jobId = 1;
}

message GetJobRequest {
  string agentId = 1;
  string jobId = 2;
}

message GetJobReply {
  string jobId = 1;
  string gitUrl = 2;
  string authCreds = 3;
  string terraform_version = 4;
  map<string, string> variables = 5;
  map<string, string> environment = 6;
}

message UpdateJobStateRequest {
  string agendId = 1;
  string jobId = 2;
  string message = 3;
  string status = 4;
}

message UpdateJobStateReply {
  string message = 1;
}

message JobLogEntry {
  string logEntry = 1;
}

message JobLogEntryReply {
  string message = 1;
}